# dtTransfer

./: .dockerignore  .env  .env.example  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  cookiecutter.json  dagster.yaml  main.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run.py  workspace.yaml
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
docs/: README.md  agendamentos_ETL.txt
entities/: __init__.py  acompanhamento_orcamento_compras.py  acompanhamento_solicitacoes_compras.py  acompanhamento_solicitacoes_compras_eng_globo.py  acopanhamento_solicitacoes_compras.py  afastamento_colaboradores.py  ajuste_ponto.py  apontadores.py  apontadores_produtos.py  apontadores_tipos.py  aprovacoes_receb_volumes.py  banco_horas.py  base_segregado.py  campanhas.py  campanhas_empresas.py  campanhas_participantes.py  cfop_fiscal.py  cliente.py  cliente_vendedor.py  clientes_redes.py  conciliacao_bancaria.py  condicoes_pagamento.py  conferencia_de_tributacao_de_produtos.py  configuracoes_ol.py  configuracoes_ol_excecoes.py  configuracoes_ol_excecoes_clientes.py  configuracoes_ol_excecoes_descontos.py  configuracoes_ol_excecoes_marcas.py  configuracoes_ol_excecoes_ols.py  configuracoes_ol_excecoes_produtos.py  configuracoes_ol_excecoes_unidades.py  configuracoes_ol_marcas.py  d_custos.py  d_eventos.py  d_filiais.py  d_historico_filial.py  dados_colaboradores.py  demissoes.py  espelho.py  estoque.py  (+92 more)
factories/: database_driver_factory.py  database_factory.py  logger_factory.py  mode_factory.py  process_factory.py  queryable_factory.py
(+602 files in other folders)
